amazon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: amazon-deployment
spec:
   replicas: 2
   selector:
      matchLabels:
         app: amazon
   template:
      metadata:
         labels:
            app: amazon
      spec:
         containers:
         - name: amazon-container
           image: nginx
           ports:
           - containerPort: 80
