amazon-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: amazon-service
spec:
   selector:
      app: amazon
   type: NodePort
   ports:
      - protocol: TCP
        port: 80
        targetPort: 80
        nodePort: 30000
