flipkart-service.yaml
apiVersion: v1
kind: Service
metadata:
      name: flipkart-service
spec:
   selector:
      app: flipkart
   ports:
      - name: port-1
        protocol: TCP
        port: 80
        targetPort: 80
      - name: port-2
        protocol: TCP
        port: 443
        targetPort: 443
