finalVersion.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amazon-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: amazon
  template:
    metadata:
      labels:
        app: amazon
    spec:
      containers:
        - name: amazon-container
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: amazon-service
spec:
  selector:
    app: amazon
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipkart-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flipkart
  template:
    metadata:
      labels:
        app: flipkart
    spec:
      containers:
        - name: flipkart-container
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: flipkart-service
spec:
  selector:
    app: flipkart
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: home
  template:
    metadata:
      labels:
        app: home
    spec:
      containers:
        - name: homepage-container
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  selector:
    app: home
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
     - amazon.kshitiz.site
     - flipkart.kshitiz.site
     - kshitiz.site
    secretName: tls-secret
  rules:
    - host: "amazon.kshitiz.site"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: amazon-service
                port:
                  number: 80
    - host: "flipkart.kshitiz.site"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flipkart-service
                port:
                  number: 80
          - path: /home
            pathType: Prefix
            backend:
              service:
                name: home-service
                port:
                  number: 80
