latestDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: amazon-app
spec:
   replicas: 2
   selector:
      matchLabels:
         app: amazonn
   template:
      metadata:
         labels:
            app: amazonn
      spec:
         containers:
            - name: amazon-app-container
              image: nginx
              ports:
              - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
   name: amazon-service
spec:
   selector:
      app: amazonn
   ports:
      - protocol: TCP
        port: 80
        targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
   name: flipkart-app
spec:
   replicas: 2
   selector:
     matchLabels:
       app: flipkartt
   template:
     metadata:
       labels:
         app: flipkartt
     spec:
         containers:
            - name: flipkart-container
              image: nginx
              ports:
              - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
    name: flipkart-service
spec:
   selector:
      app: flipkartt
   ports:
      - protocol: TCP
        port: 80
        targetPort: 80

---

apiVersion: apps/v1
kind: Deployment
metadata:
   name: random-deployment
spec:
   replicas: 2
   selector:
     matchLabels:
      app: randomm
   template:
     metadata:
      labels:
         app: randomm
     spec:
        containers:
        - name: random-con
          image: nginx
          ports:
             - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
   name: random-service
spec:
   selector:
      app: randomm
   ports:
      - protocol: TCP
        port: 80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ingress-resource
   annotations:
       nginx.ingress.kubernetes.io/rewrite-target: /
       cert-manager.io/cluster-issuer: "letsencrypt-prod"
       kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
      - amazon.kshitiz.site
      - flipkart.kshitiz.site
    secretName: tls-secret
spec:
  ingressClassName: nginx
  rules:
  - host: amazon.kshitiz.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: amazon-service
            port:
              number: 80
  - host: flipkart.kshitiz.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flipkart-service
            port:
               number: 80
  - host: kshitiz.site
    http:
      paths:
       - path: /about
         pathType: Prefix
         backend:
            service:
               name: random-service
               port:
                  number: 80
